force-app/main/default/objects/DataTableEditable__mdt/DataTableEditable__mdt.object-meta.xml
<CustomObject>
    <label>DataTableEditable</label>
    <pluralLabel>DataTableEditables</pluralLabel>
</CustomObject>