force-app/main/default/objects/DataTableEditable__mdt/fields/columnLabels__c.field-meta.xml
<CustomField>
    <fullName>columnLabels__c</fullName>
    <description>Must contain as many label as the number of fields in the select separated by a comma caracter
For non display fields, just add en space caracter

ex : 
Select Name,Id, Contact.Name from Account

will use 

Label for Account, , Label for Contact ( Id will not be displayed in the columns)</description>
    <label>columnLabels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>