force-app/main/default/objects/DataTableEditable__mdt/fields/columnReferences__c.field-meta.xml
<CustomField>
    <fullName>columnReferences__c</fullName>
    <label>columnReferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>