force-app/main/default/objects/DataTableEditable__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>Contains the query to execute. 
Must contain the Id field if the line is editable
Can only reference recordId as external parameter for filtering like :

SELECT Name FROM Contact Where AccountId=:recordId</description>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>